force-app/main/default/objects/Report_Schedule__c/Report_Schedule__c.object-meta.xml
<CustomObject>
    <label>Report Schedule</label>
    <nameField>
        <displayFormat>RS-{00000}</displayFormat>
        <label>Report Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>