force-app/main/default/objects/Report_Schedule__c/fields/Days_Delayed__c.field-meta.xml
<CustomField>
    <fullName>Days_Delayed__c</fullName>
    <formula>IF(AND(ISPICKVAL(Submission_Status__c ,&apos;Received&apos;),TODAY()&gt;Report_Due_Date__c ),TODAY()-Report_Due_Date__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Delayed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>