force-app/main/default/objects/Report_Schedule__c/fields/Donor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Donor_Comments__c</fullName>
    <label>Donor Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>