force-app/main/default/objects/Report_Schedule__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Report Schedules</relationshipLabel>
    <relationshipName>Report_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>