force-app/main/default/objects/Report_Schedule__c/fields/Report_Attached__c.field-meta.xml
<CustomField>
    <fullName>Report_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report Attached</label>
    <type>Checkbox</type>
</CustomField>