force-app/main/default/objects/Report_Schedule__c/fields/Report_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Report_Recipient__c</fullName>
    <label>Report Recipient</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal-Desk</fullName>
            </value>
            <value>
                <fullName>Internal-Finance</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>