force-app/main/default/objects/Report_Schedule__c/fields/Supporting_DocSP_Link__c.field-meta.xml
<CustomField>
    <fullName>Supporting_DocSP_Link__c</fullName>
    <label>Supporting Doc-SP Link</label>
    <type>Url</type>
</CustomField>