force-app/main/default/objects/Report_Schedule__c/fields/Type_of_Report__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Report__c</fullName>
    <label>Type of Report</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Narrative</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>